# PyLuxE

./: .gitignore  .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml  pytest.ini
src/pyluxe/element/: __init__.py  cutout.py  detector.py  diffraction.py  element.py  mirror.py  slm.py  source.py
src/pyluxe/enum/: __init__.py
src/pyluxe/typing/: __init__.py  tensor.py
src/pyluxe/utils/: core.py
tests/test_typing/: test_mode_tensor.py
