[project]
name = "onn"
version = "0.1.0"
description = "Foundation for Optical Neural Networks (ONN) research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "opencv-python>=4.10.0.84",
    "ruff>=0.6.9",
    "torch>=2.4.1",
]

[tool.ruff]
target-version = "py38"
include = ["*.py"]
exclude = [".venv"]
line-length = 79

select = [
  "C9",
  "E",
  "F",
  "W",
  "I",
]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["onn"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

# black用の設定
[tool.ruff.format]
quote-style = "double"